@@ -5,7 +5,8 @@
     * Add Net::SSLeay::Util::X509 class.
     * Add Net::SSLeay::Util::PKCS12 class.
     * Add Net::SSLeay::Util#dump_peer_certificate method.
-    
+  [Incompatible Changes]
+    * Remove the logic of OpenSSL initializetion because this is automatically executed after OpenSSL 1.1.0.
 0.015 2024-11-20
   [New Features]
     * Add Net::SSLeay::SSL_CTX#set_psk_server_callback method.
